[gd_scene load_steps=5 format=3 uid="uid://cmqw8ood3jx5"]

[ext_resource type="Script" uid="uid://b6iblfiy6gwm2" path="res://menu/menu.gd" id="1_j0t7f"]
[ext_resource type="TileSet" uid="uid://80dvq8s4ameb" path="res://level/road_tileset.tres" id="2_g18jx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g18jx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6nwqt"]

[node name="Menu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j0t7f")

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 10
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button Start" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 100
text = "Start"

[node name="Button Reset" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
focus_mode = 0
theme_override_font_sizes/font_size = 50
text = "Reset Campaign"

[node name="Settings" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_g18jx")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Settings"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Settings/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Settings/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="GridContainer Settings" type="GridContainer" parent="MarginContainer/VBoxContainer/Settings/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Settings/MarginContainer/HBoxContainer/VBoxContainer/GridContainer Settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Audio volume"

[node name="HSlider Volume" type="HSlider" parent="MarginContainer/VBoxContainer/Settings/MarginContainer/HBoxContainer/VBoxContainer/GridContainer Settings"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
max_value = 1.0
step = 0.1
value = 1.0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/Settings/MarginContainer/HBoxContainer/VBoxContainer/GridContainer Settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Music"

[node name="CheckBox Music" type="CheckBox" parent="MarginContainer/VBoxContainer/Settings/MarginContainer/HBoxContainer/VBoxContainer/GridContainer Settings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
focus_mode = 0
button_pressed = true

[node name="Panel" type="PanelContainer" parent="MarginContainer/VBoxContainer/Settings/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/panel = SubResource("StyleBoxEmpty_6nwqt")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Settings/MarginContainer/HBoxContainer/Panel"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Lead Game Designer
- Codimon

2D Artist
- Axure√© Rheeid
- Skin

Composer
- Willow Leyline

Programmer
- Codimon

Sound Designer
- LANCER"

[node name="TileMapLayer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.164706)
tile_map_data = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 29, 0, 16, 0, 1, 0, 0, 0, 0, 0, 0, 0)
tile_set = ExtResource("2_g18jx")

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button Start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button Reset" to="." method="_on_button_reset_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Settings/MarginContainer/HBoxContainer/VBoxContainer/GridContainer Settings/HSlider Volume" to="." method="_on_h_slider_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Settings/MarginContainer/HBoxContainer/VBoxContainer/GridContainer Settings/CheckBox Music" to="." method="_on_check_box_music_toggled"]
